# edu.schwabe.raytracer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  Makefile  README.md  _build-env.sh  bitbucket-pipelines.yml  build-with-local-cc.sh  ci-reports-with-local-cc.sh  conan-with-local-cc.sh  conanfile.txt  install-dependencies-with-conan.sh  install-dependencies-with-local-conan.sh  install-dependencies-with-vcpkg.bat  install_dependencies.ps1  install_dependencies.sh  raytracerui-x64-msvc-debug.lnk  raytracerui-x64-msvc-release.lnk  raytracerui.lnk  run-with-local-cc.sh  sonar-project.properties  test-with-local-cc.sh  vcpkg.json
data/: .gitignore  (+1 more)
docs/api-docs/: CMakeLists.txt
sources/primitives/: CMakeLists.txt
sources/primitives/include/: primitives.h
sources/primitives/include/primitives/: AxisAlignedBoundingBox.h  BoundingSphere.h  Facet.h  FacetEdges.h  Ray.h  Raycast.h  SplittingPlane.h
sources/primitives/src/primitives/: AxisAlignedBoundingBox.cpp  BoundingSphere.cpp  Facet.cpp  FacetEdges.cpp  Ray.cpp  Raycast.cpp  SplittingPlane.cpp
sources/raytracerui/: CMakeLists.txt
sources/raytracerui/include/: Benchmarks.h  ManualTests.h  MessageLoopBasedUI.h  OpenGLWindowsRaytracerUI.h  RaytracerUI.h  WindowsRaytracerUI.h
sources/raytracerui/include/tests/: CornellBoxScene.h  DragonScene.h  ProceduralScene.h  TestLightScene.h  TestResources.h  TestScene1.h  TestScene2.h
sources/raytracerui/src/: Benchmarks.cpp  ManualTests.cpp  MessageLoopBasedUI.cpp  OpenGLWindowsRaytracerUI.cpp  RaytracerUI.cpp  WindowsRaytracerUI.cpp  main.cpp  stdafx.h
sources/raytracerui/src/tests/: CornellBoxScene.cpp  DragonScene.cpp  TestLightScene.cpp  TestResources.cpp  TestScene1.cpp  TestScene2.cpp
sources/raytracing/: CMakeLists.txt
sources/raytracing/include/: raytracing.h
sources/raytracing/include/raytracing/: BRDFParameters.h  IlluminatedIntersection.h  RaytraceConfiguration.h  RaytraceObserver.h  RaytraceOutput.h  RaytraceParameters.h  Raytracer.h  RaytracerCache.h  RaytracerPackets.h
sources/raytracing/src/: stdafx.h
sources/raytracing/src/raytracing/: BRDFParameters.cpp  IlluminatedIntersection.cpp  RaytraceConfiguration.cpp  RaytraceObserver.cpp  RaytraceOutput.cpp  RaytraceParameters.cpp  Raytracer.cpp  RaytracerCache.cpp  RaytracerPackets.cpp
sources/vectorization/: CMakeLists.txt
sources/vectorization/include/: vectorization.h
sources/vectorization/include/primitives/: AxisAlignedBoundingBox.h  BoundingSphere.h  Facet.h  FacetEdges.h  Ray.h  Raycast.h  SplittingPlane.h
sources/vectorization/include/vectorization/: accessors.h  api_type_definitions.h  architecture.h  blends.h  constants.h  functions.h  m_f32_4x4.h  selects.h  swizzledBlends.h  swizzles.h  v_f32_4x4.h  v_i32_4.h  v_ui32_4.h  v_ui64_2.h
sources/vectorization/src/primitives/: AxisAlignedBoundingBox.cpp  BoundingSphere.cpp  Facet.cpp  FacetEdges.cpp  Ray.cpp  Raycast.cpp  SplittingPlane.cpp
sources/vectorization/src/vectorization/: m_f32_4x4.cpp  v_f32_4x4.cpp  v_i32_4.cpp  v_ui64_2.cpp
tests/vectorization.native-test/: CMakeLists.txt
tests/vectorization.native-test/include/: Compare.h  Iterate.h  MessageFormat.h  Mutate.h  StandardSample.h  ToString_specializations.h  vectorization_tests.h
trunk/raytracerui/: .cproject  .project  CMakeLists.txt  packages.config  raytracerui.vcxproj  raytracerui.vcxproj.filters
trunk/raytracerui/include/: Benchmarks.h  ManualTests.h  MessageLoopBasedUI.h  OpenGLWindowsRaytracerUI.h  RaytracerUI.h  WindowsRaytracerUI.h  benchmarks.h  tests.h
trunk/raytracerui/include/tests/: CornellBoxScene.h  DragonScene.h  ProceduralScene.h  TestLightScene.h  TestResources.h  TestScene1.h  TestScene2.h
trunk/raytracerui/src/: Benchmarks.cpp  ManualTests.cpp  MessageLoopBasedUI.cpp  OpenGLWindowsRaytracerUI.cpp  RaytracerUI.cpp  WindowsRaytracerUI.cpp  main.cpp  stdafx.h
trunk/raytracerui/src/tests/: CornellBoxScene.cpp  DragonScene.cpp  TestLightScene.cpp  TestResources.cpp  TestScene1.cpp  TestScene2.cpp
trunk/raytracing/: .cproject  CMakeLists.txt  raytracing.vcxproj  raytracing.vcxproj.filters
trunk/raytracing/include/: BRDFParameters.h  IlluminatedIntersection.h  RaytraceConfiguration.h  RaytraceParameters.h  Raytracer.h  RaytracerPackets.h  raytracing.h
trunk/raytracing/include/common/: Bitmap.h  HDRImage.h  Image.h  RefractionIndices.h  StatisticsCookie.h  Tools.h
trunk/raytracing/include/geometry/: FacetIntersection.h  Intersectable.h  ObjectGeometry.h  SceneGeometry.h  SceneIntersection.h  TransformInfo.h
trunk/raytracing/include/raytracing/: BRDFParameters.h  IlluminatedIntersection.h  RaytraceConfiguration.h  RaytraceObserver.h  RaytraceOutput.h  RaytraceParameters.h  Raytracer.h  RaytracerCache.h  RaytracerPackets.h
trunk/raytracing/include/scene/: Camera.h  Resources.h  Scene.h  SceneObject.h
trunk/raytracing/include/shading/: LightInfo.h  LightShading.h  ObjectShader.h  PerLightShadowCache.h  Raytrace.h  RaytraceBaseParameters.h  SceneShader.h  SceneShaderContainment.h  SurfaceShading.h  TextureTransformInfo.h
trunk/raytracing/src/: BRDFParameters.cpp  IlluminatedIntersection.cpp  RaytraceConfiguration.cpp  RaytraceObserver.cpp  RaytraceOutput.cpp  RaytraceParameters.cpp  Raytracer.cpp  RaytracerCache.cpp  RaytracerPackets.cpp  stdafx.h
trunk/raytracing/src/common/: Bitmap.cpp  HDRImage.cpp  RefractionIndices.cpp  StatisticsCookie.cpp  Tools.cpp
trunk/vectorization/: .cproject  .project  CMakeLists.txt  vectorization.vcxproj  vectorization.vcxproj.filters
trunk/vectorization.native-test/: CMakeLists.txt  stdafx.cpp  stdafx.h  vectorization.native-test.vcxproj  vectorization.native-test.vcxproj.filters
trunk/vectorization.native-test/include/: Compare.h  Iterate.h  MessageFormat.h  Mutate.h  StandardSample.h  ToString_specializations.h  ValueBits.h  vectorization_tests.h
trunk/vectorization.native-test/src/: Compare.h  MessageFormat.h  StandardSample.h  TestUtils.h
trunk/vectorization/include/: primitives.h  vectorization.h
trunk/vectorization/src/: stdafx.h
(+1144 files in other folders)
